--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/node_modules/
+/frontend/node_modules/
+/backend/node_modules/
 
 # testing
-/coverage
+/coverage/
 
 # production
-/build
+/build/
 
 # misc
 .DS_Store
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Uncomment if you need to track package-lock files
+package-lock.json
+frontend/package-lock.json
+backend/package-lock.json
+
+# Uncomment if you need to track package.json files
+frontend/package.json
+backend/package.json
