--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "cra-template": "^1.2.0",
     "ecommerc": "file:..",
