--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,5 +1,5 @@
 PORT=8000
-DB_URL="mongodb+srv://shivanshgarg:Qwerty@e-commerce.dlbjq.mongodb.net/"
+DB_URL="mongodb+srv://shivanshgarg007:Qwerty@e-commerce.mflyh.mongodb.net/"
 
 JWT_SECRET_KEY="randomtoken1234567890"
 JWT_EXPIRE=7d
