--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "\"Shivansh\"",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
